--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Matthias Heideric Photography</string>
+    <string name="app_name">Matthias Heiderich Photography</string>
 </resources>
