--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Matthias Heiderich Photography</string>
+
+    <string name="muzei_source_description">Matthias Heiderich description</string>
+    <string name="muzei_source_name">Matthias Heiderich name</string>
 </resources>
